# bithum-rest-api

./: .env  Cargo.toml  README.md  volume.sh
examples/: testactor.rs  testorder.rs  testthreadpool.rs  testws.rs  testzmq.rs
src/: authenticate.rs  lib.rs  model.rs
src/rest/: client.rs  mod.rs  model.rs
src/worker/: mod.rs
src/ws/: connector.rs  innerhandler.rs  mod.rs  model.rs
