[package]
name = "bithapi"
version = "0.1.0"
authors = ["Jaemin Kim <geminik23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

anyhow="*"
base64="0.11"
time = "0.1"
zmq = "0.9"
log = "0.4"
env_logger = "0.6"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
ring = "0.13"
hex = "0.3"

reqwest ={version="0.10", features=["json", "blocking"]}

threadpool="1.7"
